--- a/css/style.scss
+++ b/css/style.scss
@@ -372,13 +372,13 @@ html {
 }
 
 .search-box {
-    width: 700px;
     position: relative;
+    width: 700px;
+    padding: 10px;
+    padding-left: 40px;
     border-radius: 5px;
     border: 1px solid #EEF0F3;
     box-shadow: 0px 0px 6px #EEF0F3;
-    padding: 10px;
-    padding-left: 40px;
 }
 
 .search-icon {
@@ -386,18 +386,14 @@ html {
    z-index: 999;
    padding-top: 7px;
    padding-left: 10px;
-   
 }
 
 .profile-inner {
-      display: flex;
-      align-items: center;
-      position: relative;
-      justify-content: space-between;
-}
-
-.profile-img {
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-shrink: 0;
+    position: relative;
 }
 
 .profile-status-img {
@@ -423,12 +419,14 @@ html {
 .create-job {
     display: flex;
     align-items: center;
+    flex-shrink: 0;
     background-color: #1E86FF;
     padding: 10px;
     padding-right: 30px;
     border-radius: 5px;
     color: white;
     margin-left: 470px;
+    width: 143px;
 }
 
 .icon-plus {
@@ -443,7 +441,7 @@ html {
 .nav-wrapper {
     display: flex;
     flex-direction: column;
-    width: 240px;
+    width: 350px;
     border-right: 2px solid #F0F2F4;
 }
 
@@ -469,14 +467,14 @@ html {
 }
 
 .nav-item:hover {
-  background-color: #F4F9FF;
-  color: #1E86FF;
+    background-color: #F4F9FF;
+    color: #1E86FF;
 }
 
 .nav-heading-name {
     padding-left: 10px;
-    font-weight: bold;
     margin: 0;
+    font-weight: bold;
     color: black;
 }
 
@@ -490,9 +488,10 @@ html {
 }
 
 .messages-column-wrapper {
-  width: 370px;
+  display: flex;
+  flex-direction: column;
+  width: 560px;
   border-right: 2px solid #F0F2F4;
-  overflow: hidden;
   //height: calc(100vh - 77px);
 }
 
@@ -511,7 +510,6 @@ html {
 
 .messages-search {
   padding: 20px 30px 0px 30px;
-  
   border-bottom: 2px solid #F0F2F4;
 }
 
@@ -540,6 +538,10 @@ html {
   color: #909CAC;
 }
 
+.card-active {
+  background-color: #F4F9FF;
+}
+
 #message-filter {
   border-radius: 5px;
   margin-top: 10px;
@@ -562,17 +564,18 @@ html {
   overflow-y: auto;
   height: calc(100vh - 231px);
   overflow-x: hidden;
+  box-shadow: inset -7px -50px 32px -27px rgb(235, 235, 235);
+  -webkit-box-shadow: inset -7px -50px 32px -27px rgb(235, 235, 235);
 }
 
-.messages::-webkit-scrollbar { 
-  display: none;
-}
+//.messages::-webkit-scrollbar { 
+ // display: none;
+//}
 
 .message-card {
   display: flex;
   flex-direction: column;
-  padding: 20px 40px;
-  padding-bottom: 0;
+  padding: 20px 10px 0px 40px;
   border-bottom: 2px solid #F0F2F4;
 }
 
@@ -580,10 +583,6 @@ html {
   display: flex;
   flex-direction: column;
   margin-left: 10px;
-}
-
-.sender-picture {
- 
 }
 
 .message-sender {
@@ -624,8 +623,8 @@ html {
 .time {
   position: absolute;
   font-size: 14px;
-  left: 270px;
-  top: 0px;
+  right: 0px;
+  top: 4px;
   white-space: nowrap;
   color: #7386A6;
   margin: 0;
@@ -637,4 +636,254 @@ html {
 
 .sender-pic {
   border-radius: 50%;
+}
+
+.sender-tab {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+  padding-bottom: 0px;
+  padding: 10px 20px;
+  min-width: 650px;
+  border-bottom: 2px solid #F0F2F4;
+}
+
+.right-actions {
+  display: flex;
+  align-items: center;
+}
+
+.sender-info-big {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.sender-name-big {
+  margin: 0;
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.applied-for-big {
+  margin: 0;
+  color: #7386A6;
+  font-size: 14px;
+}
+
+.text-screen-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.view-profile {
+  background-color: #E8F2FF;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #1E86FF;
+  font-weight: bold;
+}
+
+#message-filter-two {
+  border-radius: 5px;
+  width: 140px;
+  padding: 5px 10px;
+  border: 1px solid #D2D7E0;
+  font-weight: bold;
+  color: #808EA0;
+  margin-top: 0px;
+  margin-left: 20px;
+}
+
+.thumbs-up {
+  background-color: #E7F9F6;
+  border-radius: 5px;
+  padding: 10px;
+  margin-left: 15px;
+}
+
+.x {
+  border: 1px solid #E4E7EB;
+  padding: 10px;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+
+.three-dots {
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.text-screen-window {
+  background-color: #FAFBFD;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 139px);
+}
+
+.messages-filter-form-two {
+  margin: 0;
+}
+
+.message-wrapper-left {
+  display: flex;
+  margin-left: 40px;
+}
+
+.sndr-int {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  justify-content: center;
+  background-color: #92C5FF;
+  padding: 10px;
+  font-weight: bold;
+  border-radius: 50%;
+  margin: 0px;
+  width: 35px;
+  height: 35px;
+}
+
+.message-timestamp {
+  text-align: center;
+  background-color: white;
+  padding: 5px 15px;
+  border-radius: 10px;
+  border: 1px solid #D3D8E1;
+  width: 65px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #6E82A3;
+}
+
+.text-message-box {
+  margin-left: 20px;
+  padding: 20px;
+  padding-top: 0px;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #EFF0F4;
+  max-width: 700px;
+  min-width: 100px;
+  box-shadow: 0px 0px 6px #EEF0F3;
+}
+
+.text-text {
+  overflow-wrap: normal;
+  font-size: 14px;
+}
+
+.message-sent {
+  margin-left: 115px;
+  color: #6E82A3;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.message-wrapper-left-reversed {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-right: 40px;
+}
+
+.text-message-box-reversed {
+  margin-right: 20px;
+  padding: 20px;
+  padding-top: 0px;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #EFF0F4;
+  max-width: 700px;
+  min-width: 100px;
+  background-color: #E8F2FF;
+  border: 1px solid #8ABFFF;
+}
+
+.message-sent-reversed {
+  display: flex;
+  justify-content: flex-end;;
+  margin-right: 115px;
+  color: #6E82A3;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.text-text-reversed {
+  margin-top: 20px;
+}
+
+.write-message-box {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #D9DEE5;
+  padding: 20px;
+  padding-top: 15px;
+  margin: 0px auto;
+  margin-top: 120px;
+  //width: 1150px;
+  width: 90%;
+}
+
+.edit-text-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.edit-text {
+  display: flex;
+  justify-content: space-between;
+  align-items: centers;
+  width: 220px;
+}
+
+.send-text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 170px;
+}
+
+.write-text {
+  border: none;
+  margin-bottom: 10px;
+  padding: 5px;
+  padding-left: 0;
+}
+
+.send {
+  display: flex;
+  align-items: center;
+  background-color: #1E86FF;
+  color: white;
+  border-radius: 5px;
+}
+
+.b-bold {
+  font-weight: bold;
+  color: #8F9CB2;
+}
+
+.i-cursive {
+  font-weight: bold;
+  font-style: italic;
+  color: #8F9CB2;
+}
+
+.down-arrow-border-left {
+  border-left: 1px solid rgb(148, 148, 148);
+  padding: 10px 5px;
+}
+
+.send-text-button{
+  padding: 0px 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
